  using $Config->{SendMailProgram}, weed duplicate email addresses, 
  sort by email instead of last name 

* let [row_edit] honor spread_width meta setting

* display an error message if for whatever reason the regions directory is
  empty+

Foundation
----------

* Remove "default" column from mv_metadata.asc, as it is not used anywhere.
  This allows the addition of mv_metadata to MySQL, as otherwise the
  column name "default" prevents the creation of the table.

* Add missing [timed-build] to category_vertical_tree component.

TableEditor
-----------

* Apply Paul Vinciguerra's patch to number of rows thing, which gets multiple row
  tabs working on the tabbed display if not in ui_style mode.

* Make containing form name (i.e. <form name=foo ...>) available
  to the widget.

Menu
----

* Enhance flyout menus to have a lined-up image indicating a submenu.
  The parameter is an image name (if not beginning with <) or
  arbitrary HTML (if first character is <).

  Use by passing the parameter:

  	  submenu_image_right="[var IMAGE_DIR]/right.gif"

  or

  	  submenu_image_left="[image src=asterisk.gif]"

  or to fake it out with some text:

	submenu_image_right=|
			<span style="font-size: smaller !important"> &nbsp; (more)</span>
						|

Widgets
-------

* Allow date_widget to display/store empty value if called as date_blank
  or datetime_blank.

Options
-------

* Add blank_label="--select--" option to [item-options], allows development
  of code to enforce option selection.

* Add missing space to SQL query in Interchange 4.8 options.

i18n
----

* "make localefiles" ignores CVS conflict files now

* Japanese UI translation update from Murahashi <murahashi@ayayu.com>.

Debian
------

* Add libhtml-parser-perl to Build-Depends to keep HTML::Entities
  module out of the package (Closes: #224435, thanks to Henrik Holmboe
  <elements@hack.se> for the bug report)


------------------------------------------------------------------------------

(end)