@@ -1,6 +1,6 @@
 # Vend::Server - Listen for Interchange CGI requests as a background server
 #
-# $Id: Server.pm,v 2.46 2004-01-30 22:25:05 mheins Exp $
+# $Id: Server.pm,v 2.47 2004-02-02 09:23:37 racke Exp $
 #
 # Copyright (C) 2002-2003 Interchange Development Group
 # Copyright (C) 1996-2002 Red Hat, Inc.
@@ -26,7 +26,7 @@
 package Vend::Server;
 
 use vars qw($VERSION);
-$VERSION = substr(q$Revision: 2.46 $, 10);
+$VERSION = substr(q$Revision: 2.47 $, 10);
 
 use POSIX qw(setsid strftime);
 use Vend::Util;
@@ -767,7 +767,9 @@ sub http_soap {
 
 	(undef, $Remote_addr) =
 				sockaddr_in(getpeername($fh));
-	$$env{REMOTE_HOST} = gethostbyaddr($Remote_addr, AF_INET);
+	if ($Global::HostnameLookups) {
+		$$env{REMOTE_HOST} = gethostbyaddr($Remote_addr, AF_INET);
+	}
 	$Remote_addr = inet_ntoa($Remote_addr);
 
 	$$env{REMOTE_ADDR} = $Remote_addr;
